--- a/okdevtv_spring/okspring/pom.xml
+++ b/okdevtv_spring/okspring/pom.xml
@@ -115,6 +115,12 @@
 			<version>5.1.32</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis</artifactId>
+			<version>3.2.7</version>
+		</dependency>
+
 		<!-- Test -->
 		<dependency>
 			<groupId>junit</groupId>
