--- a/okdevtv_spring/okspring/pom.xml
+++ b/okdevtv_spring/okspring/pom.xml
@@ -128,6 +128,11 @@
 			<version>4.7</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>3.2.3.RELEASE</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
